// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/activity-feed/keywords/Keywords should correctly render info icon 1`] = `
<span
  className="bcs-keywords-actions"
>
  <Tooltip
    className="bcs-keywords-actions-tooltip"
    constrainToScrollParent={false}
    constrainToWindow={true}
    position="bottom-left"
    text={
      <FormattedMessage
        values={
          Object {
            "words": "cartoon font logo",
          }
        }
      />
    }
    theme="default"
  >
    <div
      className="bcs-keywords-info"
    >
      <IconInfoInverted
        height={16}
        width={16}
      />
    </div>
  </Tooltip>
</span>
`;

exports[`features/activity-feed/keywords/Keywords should correctly render keywords 1`] = `
<div
  className="bcs-keywords"
>
  <span
    className="bcs-keywords-message"
  >
    <FormattedMessage />
  </span>
  <Info
    words="cartoon font logo brand clip art illustration line artwork"
  />
</div>
`;

exports[`features/activity-feed/keywords/Keywords should not render info icon if words are not passed 1`] = `
<div
  className="bcs-keywords"
>
  <span
    className="bcs-keywords-message"
  >
    <FormattedMessage />
  </span>
</div>
`;
